gatekeeper/constraints/allowed-registry.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRegistry
metadata:
  name: allowed-registry
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["demo"]
  parameters:
    allowedRegistries:
      - "ghcr.io/hunghk43/"
