gatekeeper/constraints/no-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoRootUser
metadata:
  name: no-root-user
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["demo"]
